--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
       <div class="container">
         <h1>Welcome</h1>
         <p>Are you ready to discover my secret?</p>
-        <a class="btn btn-primary btn-lg" href=" {{ url_for('login') }} "
+        <a class="btn btn-primary btn-lg" href=" {{ url_for('get_login') }} "
           >Login</a
         >
       </div>
