--- a/templates/login.html
+++ b/templates/login.html
@@ -1,30 +1,9 @@
-<!DOCTYPE HTML>
-
-<html>
-	<head>
-		<title>Login</title>
-	</head>
-	<body>
-        <div class="container">
+{% extends "base.html" %}
+{% from 'bootstrap5/form.html' import render_form %}
+{% block title %}Login {% endblock %}
+{% block content %}
+	<div class="container">
 		<h1>Login</h1>
-        <form method="POST" action="{{url_for('get_login')}}" novalidate>
-					{{form.csrf_token}}
-					<p>
-
-						{{form.email.label}} <br> {{form.email(size=30)}}
-						{% for err in form.email.errors %}
-						<span style="color:red">{{err}}</span>
-						{% endfor %}
-					</p>
-					<p>
-
-						{{form.password.label}} <br> {{form.password(size=30)}}
-						{% for err in form.password.errors %}
-						<span style="color:red">{{err}}</span>
-						{% endfor %}
-					</p>
-					{{form.submit}}
-				</form>
-        </div>
-	</body>
-</html>
+		{{render_form(form)}}
+	</div>
+{% endblock %}
